# clipshare

./: .gitignore  README.md  clipshare.spec  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
.trae/specs/lan-clipboard-sync/: checklist.md  spec.md  tasks.md
scripts/: build.bat  build.ps1  build.sh
src/clipshare/: __init__.py  __main__.py  cli.py  clipboard.py  config.py  constants.py  crypto.py  daemon.py  discovery.py  protocol.py  sync.py
tests/: run_tests.py  test_clipboard.py  test_config.py  test_crypto.py  test_discovery.py  test_protocol.py  test_smoke.py
