[project]
name = "clipshare"
version = "0.1.0"
description = "Lightweight LAN clipboard sharing tool for Windows and macOS"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "cryptography>=41.0.0",
    "pyperclip>=1.8.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306",
]
macos = [
    "pyobjc-framework-AppKit>=9.0",
    "pyobjc-framework-Cocoa>=9.0",
]

[project.scripts]
clipshare = "clipshare.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]